--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,10 @@
 name: End-to-end tests
-on: [push]
+
+on:
+  workflow_dispatch:
+    branches:
+    - main
+
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
