--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,11 @@
 name: End-to-end tests
 
 on:
-  workflow_dispatch:
-    branches:
-    - main
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   cypress-run:
@@ -11,6 +13,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+        submodules: recursive
+      - name: Get git output names
+        id: git
+        shell: bash
+        run: |
+          if [ -d "./jenkins-lib"* ]; then
+            echo "UPdaating submodule"
+          else
+            echo "Adding submodule"
+            git submodule add https://github.com/78mohamed/jenkins-lib.git 
+            git submodule update --init --recursive
+            files=$(ls -A)
+            for file in $files; do
+              echo "$file"
+            done
+          fi
+          git config --global user.email "mohamed.mansour98.54@gmail.com"
+          git config --global user.name "78mohamed"
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       # https://github.com/cypress-io/github-action
