--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          submodules: recursive
       - name: Get git output names
         id: git
         shell: bash
@@ -23,8 +21,7 @@ jobs:
             echo "UPdaating submodule"
           else
             echo "Adding submodule"
-            git submodule add https://oauth2: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@github.com/78mohamed/gitactions-try.git 
-            git submodule update --init --recursive
+            git clone https://oauth2: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@github.com/78mohamed/gitactions-try.git 
             files=$(ls -A)
             for file in $files; do
               echo "$file"
