--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          name: 78mohamed/jenkins-lib
+          name: 78mohamed/face-generator.git
       - name: Get git output names
         id: git
         shell: bash
         run: |
-          git clone https://github.com/78mohamed/face-generator.git
           files=$(ls -A)
           for file in $files; do
             echo "$file"
