--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules:: 78mohamed/face-generator.git
+          submodules: 78mohamed/face-generator.git
       - name: Get git output names
         id: git
         shell: bash
