--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 78mohamed/face-generator.git
+          fetch-depth: 0
       - name: Get git output names
         id: git
         shell: bash
