--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: 78mohamed/face-generator.git
+          submodules: https://github.com/78mohamed/face-generator.git
           fetch-depth: 0
       - name: Get git output names
         id: git
