--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
         with:
-          repository: 78mohamed/face-generator.git
+          repository: 78mohamed/face-generator
       - name: Get git output names
         id: git
         shell: bash
