--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
         with:
-          repository: 78mohamed/gitactions-try
+          repository: 78mohamed/face-generator
       - name: Get git output names
         id: git
         shell: bash
